examples/test/testpolicy16252.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16252
  namespace: namespace349
spec:
  podSelector:
    matchLabels:
      key12: value7
      key44: value18
      key47: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value4
      podSelector:
        matchLabels:
          key12: value15
          key40: value36
          key9: value15
